--- a/_posts/2019-12-20-luoyang.md
+++ b/_posts/2019-12-20-luoyang.md
@@ -6,17 +6,17 @@ categories:
   - Journey
   - Gallery
 description: 不赶良时，只候时机，匆匆起程，却享悠闲时光。十三朝古都巡游，方知历史沉淀深浅，腊月时光平添惬意。
-image: "{{ site.baseurl }}/assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg"
-image-sm: "{{ site.baseurl }}/assets/images/sina/243c3c692777ede30f26f6e9fa89beb5.jpg"
+image: /assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg"
+image-sm: /assets/images/sina/243c3c692777ede30f26f6e9fa89beb5.jpg"
 thumbs:
-- "{{ site.baseurl }}/assets/images/sina/f10416b29ee96c6922b675da3f9c712f.jpg"
-- "{{ site.baseurl }}/assets/images/sina/0ea962811eba0a2a285c006a0a337fd4.jpg"
-- "{{ site.baseurl }}/assets/images/sina/0171ff4b2a4d0ca0a2498c20bc094348.jpg"
-- "{{ site.baseurl }}/assets/images/sina/483bceaab483227a6d31e5a88ea10f59.jpg"
-- "{{ site.baseurl }}/assets/images/sina/7cb095c2952446bc105249e15f0687e9.jpg"
-- "{{ site.baseurl }}/assets/images/sina/1fa26da15494f4d25e434172338bbb9e.jpg"
-- "{{ site.baseurl }}/assets/images/sina/08c86eaab3edce71545f93325eea0933.jpg"
-- "{{ site.baseurl }}/assets/images/sina/554dfff9006b5f780ae6ce6c018e4c22.jpg"
+- /assets/images/sina/f10416b29ee96c6922b675da3f9c712f.jpg"
+- /assets/images/sina/0ea962811eba0a2a285c006a0a337fd4.jpg"
+- /assets/images/sina/0171ff4b2a4d0ca0a2498c20bc094348.jpg"
+- /assets/images/sina/483bceaab483227a6d31e5a88ea10f59.jpg"
+- /assets/images/sina/7cb095c2952446bc105249e15f0687e9.jpg"
+- /assets/images/sina/1fa26da15494f4d25e434172338bbb9e.jpg"
+- /assets/images/sina/08c86eaab3edce71545f93325eea0933.jpg"
+- /assets/images/sina/554dfff9006b5f780ae6ce6c018e4c22.jpg"
 ---
 
 ![]({{ site.baseurl }}/assets/images/sina/bd783d9b5d75cd1087eca9f95c2e2eb6.jpg)
