--- a/_posts/2017-05-01-begin.markdown
+++ b/_posts/2017-05-01-begin.markdown
@@ -6,17 +6,17 @@ categories:
   - Journey
   - Gallery
 description: 
-image: "{{ site.baseurl }}/assets/images/sina/adaddde12c133e965bf37d7a8a4b4f74.jpg"
-image-sm: "{{ site.baseurl }}/assets/images/sina/fbeba802f456c8e7608f4bdcd5672fa7.jpg"
+image: /assets/images/sina/adaddde12c133e965bf37d7a8a4b4f74.jpg"
+image-sm: /assets/images/sina/fbeba802f456c8e7608f4bdcd5672fa7.jpg"
 thumbs:
-- "{{ site.baseurl }}/assets/images/sina/83508b25771b54eaeae27c89d1da394f.jpg"
-- "{{ site.baseurl }}/assets/images/sina/35eec7d0e23ea088289e94cd6bf2ba20.jpg"
-- "{{ site.baseurl }}/assets/images/sina/9fd55a72cf446a3000cff0a0a7d1777f.jpg"
-- "{{ site.baseurl }}/assets/images/sina/b57cd097681daa7886fc4f6731891b2a.jpg"
-- "{{ site.baseurl }}/assets/images/sina/28f77d1ea5b1dd38ddf4b2542dfefe96.jpg"
-- "{{ site.baseurl }}/assets/images/sina/aae8a22d01802785a46831593f28bb9b.jpg"
-- "{{ site.baseurl }}/assets/images/sina/dc6275f65935261f0deaf324983de814.jpg"
-- "{{ site.baseurl }}/assets/images/sina/3f86badd428d995e6359284118026241.jpg"
+- /assets/images/sina/83508b25771b54eaeae27c89d1da394f.jpg"
+- /assets/images/sina/35eec7d0e23ea088289e94cd6bf2ba20.jpg"
+- /assets/images/sina/9fd55a72cf446a3000cff0a0a7d1777f.jpg"
+- /assets/images/sina/b57cd097681daa7886fc4f6731891b2a.jpg"
+- /assets/images/sina/28f77d1ea5b1dd38ddf4b2542dfefe96.jpg"
+- /assets/images/sina/aae8a22d01802785a46831593f28bb9b.jpg"
+- /assets/images/sina/dc6275f65935261f0deaf324983de814.jpg"
+- /assets/images/sina/3f86badd428d995e6359284118026241.jpg"
 ---
 以前都有修照片的习惯，每一次旅行，或者扫街回来，都会将当次的照片归类，整理。如果有值得修的好片子，也会对应的小修一把。
 
