--- a/_posts/2017-07-14-ml-note-week11.markdown
+++ b/_posts/2017-07-14-ml-note-week11.markdown
@@ -5,8 +5,8 @@ date: 2017-07-14
 categories:
   - Tech
 description: 
-image: "{{ site.baseurl }}/assets/images/sina/d48bc61248fb6b6c9bbb3c21e5ea4c07.jpg"
-image-sm: "{{ site.baseurl }}/assets/images/sina/d48bc61248fb6b6c9bbb3c21e5ea4c07.jpg"
+image: /assets/images/sina/d48bc61248fb6b6c9bbb3c21e5ea4c07.jpg"
+image-sm: /assets/images/sina/d48bc61248fb6b6c9bbb3c21e5ea4c07.jpg"
 ---
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
