--- a/_posts/2019-10-11-haskell.markdown
+++ b/_posts/2019-10-11-haskell.markdown
@@ -5,8 +5,8 @@ date: 2019-10-11
 categories:
   - Reading
 description: 笔者对于函数式编程纯属完全的门外汉，但一直想窥觑其一隅。故开坑精读《Hashkell函数式编程入门》以求入门，以此笔记为据。以至于此文大量初级知识，博君见笑。
-image: "{{ site.baseurl }}/assets/images/haskell.jpg"
-image-sm: "{{ site.baseurl }}/assets/images/haskell.jpg"
+image: /assets/images/haskell.jpg"
+image-sm: /assets/images/haskell.jpg"
 ---
 <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
